add Procfile, start beer-finder js app

--- a/app/views/pages/graphiql.html.erb
+++ b/app/views/pages/graphiql.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GraphQL Ruby + Rails Demo</title>
+    <title>Beer Graph</title>
     <%= stylesheet_link_tag "graphiql" %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.min.js"></script>
